--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,9 @@
 @import 'base/typography';
 
 @import 'layout/header';
+@import 'layout/landingPage';
 @import 'layout/lastPictures';
+@import 'layout/choosePicture';
 
 
 
