--- a/sass/layout/_choosePicture.scss
+++ b/sass/layout/_choosePicture.scss
@@ -1,9 +1,26 @@
-.lastPictures {
+.choosePicture {
     width: 90%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    p {
+        color: white;
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .dateInput {
+        font-size: 1.5rem;
+        color: white;
+        text-align: center;
+        width: 20%;
+    }
 
     .card {
         border-radius: 16px;
@@ -23,6 +40,8 @@
 
             .card-text {
                 font-size: 1.5rem;
+                color: initial;
+                text-align: justify;
             }
         }
     }
