--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,32 @@
 .header {
-    height: 100vh;
-    background: url(../img/skyFetchers.jpg) center;
-    background-size: cover;
-    background-position: top;
+    position: fixed;
+    width: 100%;
+    height: 10vh;
+    background: rgba(15, 15, 15, 0.6);
     display: flex;
-    align-items: center;
-    justify-content: center;
+    z-index: 99;
 
-    h1 {
-        color: white;
-        font-size: 12rem;
-        font-style: italic;
-        font-weight: 800;
+    ul {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 2rem;
+        list-style: none;
+
+        a {
+            &:link,
+            &:visited {
+                color: white;
+                text-decoration: none;
+                font-weight: 400;
+                font-variant: small-caps;
+            }
+
+            &:hover {
+                font-weight: bold;
+            }
+        }
     }
 }
