--- a/sass/style.css
+++ b/sass/style.css
@@ -13,12 +13,36 @@ html {
 
 body {
   box-sizing: border-box;
-  font-weight: 400; }
+  font-weight: 400;
+  background: black; }
 
 body {
   font-family: 'Quantico', sans-serif; }
 
 .header {
+  position: fixed;
+  width: 100%;
+  height: 10vh;
+  background: rgba(15, 15, 15, 0.6);
+  display: flex;
+  z-index: 99; }
+  .header ul {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 2rem;
+    list-style: none; }
+    .header ul a:link, .header ul a:visited {
+      color: white;
+      text-decoration: none;
+      font-weight: 400;
+      font-variant: small-caps; }
+    .header ul a:hover {
+      font-weight: bold; }
+
+.landingPage {
   height: 100vh;
   background: url(../img/skyFetchers.jpg) center;
   background-size: cover;
@@ -26,16 +50,62 @@ body {
   display: flex;
   align-items: center;
   justify-content: center; }
-  .header h1 {
+  .landingPage h1 {
     color: white;
     font-size: 12rem;
     font-style: italic;
-    font-weight: 800; }
+    font-weight: 800;
+    font-variant: small-caps; }
 
 .lastPictures {
   width: 90%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  border: 3px solid black; }
+  margin-top: 5rem; }
   .lastPictures .card {
-    border: 1px solid red; }
+    border-radius: 16px;
+    margin: 3rem;
+    width: 100%; }
+    .lastPictures .card img,
+    .lastPictures .card iframe {
+      border-radius: 16px 16px 0 0; }
+    .lastPictures .card .card-body h3 {
+      font-weight: bold;
+      text-transform: italic; }
+    .lastPictures .card .card-body .card-text {
+      font-size: 1.5rem; }
+
+.choosePicture {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; }
+  .choosePicture p {
+    color: white;
+    font-size: 1.5rem;
+    text-align: center; }
+  .choosePicture .dateInput {
+    font-size: 1.5rem;
+    color: white;
+    text-align: center;
+    width: 20%; }
+  .choosePicture .card {
+    border-radius: 16px;
+    margin: 3rem;
+    width: 100%; }
+    .choosePicture .card img,
+    .choosePicture .card iframe {
+      border-radius: 16px 16px 0 0; }
+    .choosePicture .card .card-body h3 {
+      font-weight: bold;
+      text-transform: italic; }
+    .choosePicture .card .card-body .card-text {
+      font-size: 1.5rem;
+      color: initial;
+      text-align: justify; }
