--- a/sass/layout/_lastPictures.scss
+++ b/sass/layout/_lastPictures.scss
@@ -2,7 +2,8 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    // inverse la colonne pour avoir la dernière image (du jour) en premier
+    flex-direction: column-reverse;
     margin-top: 5rem;
 
     .card {
